# agent-guard

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: full_governance.py  identity_and_trust.py  mcp_security_scan.py  playground.py  policy_yaml.py  quickstart.py
src/agent_guard/: __init__.py  __main__.py
src/agent_guard/_defaults/policies/: permissive.yaml  restrictive.yaml  standard.yaml
src/agent_guard/audit/: logger.py
src/agent_guard/cli/: __main__.py  app.py
src/agent_guard/compliance/: attestation.py  integrity.py
src/agent_guard/core/: actions.py  engine.py  policy.py
src/agent_guard/dashboard/: __init__.py  index.html  server.py
src/agent_guard/filters/: __init__.py  output_filter.py
src/agent_guard/identity/: agent_id.py  trust.py
src/agent_guard/integrations/: autogen.py  crewai.py  langchain.py  openai_agents.py
src/agent_guard/mcp/: gateway.py  injection_detector.py  scanner.py
src/agent_guard/mesh/: network.py
src/agent_guard/observability/: hooks.py
src/agent_guard/policies/: builtin.py  loader.py  rate_limit.py
src/agent_guard/reliability/: circuit_breaker.py  slo.py
src/agent_guard/sandbox/: executor.py
src/agent_guard/server/: __init__.py  app.py  auth.py  config.py  proxy.py  store.py  teams.py
src/agent_guard/tokens/: __init__.py  inventory.py  policy.py  risk.py  scanner.py
tests/: test_audit.py  test_compliance.py  test_dashboard.py  test_identity.py  test_injection_detector.py  test_mcp.py  test_mesh.py  test_observability.py  test_output_filter.py  test_policy_engine.py  test_rate_limit.py  test_reliability.py  test_sandbox.py  test_server_app.py  test_server_auth.py  test_server_config.py  test_server_proxy.py  test_server_store.py  test_server_teams.py  test_token_dashboard.py  test_token_inventory.py  test_token_policy.py  test_token_risk.py  test_token_scanner.py
