[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-guard"
version = "0.2.0"
description = "Simple, powerful governance for AI agents — policy enforcement, identity, sandboxing, and reliability in one package."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Agent Guard Contributors" }]
keywords = ["ai", "agents", "governance", "security", "policy", "trust", "owasp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "eval_type_backport>=0.2.0; python_version < '3.10'",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
openai = ["openai>=1.0"]
crewai = ["crewai>=0.1"]
autogen = ["pyautogen>=0.2"]
all = [
    "langchain-core>=0.2",
    "openai>=1.0",
    "crewai>=0.1",
    "pyautogen>=0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
agent-guard = "agent_guard.cli.app:main"

[project.urls]
Homepage = "https://github.com/Aveerayy/agent-guard"
Repository = "https://github.com/Aveerayy/agent-guard"
Issues = "https://github.com/Aveerayy/agent-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_guard"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_guard/_defaults" = "agent_guard/_defaults"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
